Closed Bug 466090 Opened 16 years ago Closed 16 years ago

AVMPLUS_DIRECT_THREADED is not working for sunstudio

Categories

(Tamarin Graveyard :: Build Config, defect)

Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

Attachments

(1 file)

"/export/home/leon.sha/uild/tamarin-redux/core/Interpreter.cpp", line 128: Error: #error "Threaded code not supported for this platform/compiler".
Attached patch patchSplinter Review
Enable AVMPLUS_DIRECT_THREADED only for gcc.
Assignee: nobody → leon.sha
Attachment #349346 - Flags: review?(stejohns)
Attachment #349346 - Flags: review?(stejohns) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: