 Bug 466090 AVMPLUS_DIRECT_THREADED is not working for sunstudio. stejohns: review+